--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -33,3 +33,17 @@
   font-weight: 600;
   font-style: italic;
 }
+
+@font-face {
+  font-family: "SaolDisplay-Regular";
+  src: url("../assets/fonts/SaolDisplay-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "SaolDisplay-RegularItalic";
+  src: url("../assets/fonts/SaolDisplay-RegularItalic.otf") format("opentype");
+  font-weight: 400;
+  font-style: italic;
+}
