--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,4 +1,7 @@
 :root {
+  --font-primary: 'BT Beau Sans', sans-serif;
+  --font-secondary: 'Saol Display', serif;
+
   --dl-layout-size-large: 144px;
   --dl-layout-size-small: 48px;
   --dl-layout-space-unit: 16px;
