--- a/src/components/universe_section.css
+++ b/src/components/universe_section.css
@@ -1,220 +1,202 @@
-/* src/views/frame265.css (ĐÃ SỬA LỖI CĂN GIỮA VÀ THU NHỎ) */
+/* src/components/universe_section.css */
 
-.frame265-container {
-  width: 100%;
-  display: flex;
-  overflow: hidden;
-  min-height: 100vh;
-  align-items: center;
-  flex-direction: column;
-}
+/* ==========================================================================
+   Main Container & Layout
+   ========================================================================== */
 
-.frame265-frame265 {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  /* SỬA LỖI: Dùng Flexbox để căn giữa nội dung bên trong */
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  position: relative;
-  flex-shrink: 0;
-  background-color: var(--dl-color-default-black);
-}
+   .universe-section-container {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background-color: var(--dl-color-default-black);
+  }
+  
+  .universe-section__viewport {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
+    flex-shrink: 0;
+  }
+  
+  .universe-section__background-image {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+  }
+  
+  /* ==========================================================================
+     Graphic Elements Container
+     Đây là "artboard" từ Figma, được scale nhỏ lại để responsive.
+     Tất cả các phần tử bên trong sẽ được định vị theo container này.
+     ========================================================================== */
+  
+  .universe-section__graphic-container {
+    width: 1920px;
+    height: 1080px;
+    position: relative;
+    flex-shrink: 0; /* Ngăn container bị co lại */
+    transform: scale(0.5); /* Thu nhỏ toàn bộ khối đồ họa */
+  }
+  
+  
+  /* ==========================================================================
+     Text Style
+     ========================================================================== */
+     .universe-section__text {
+        /* Vị trí mới: Căn giữa hoàn hảo vào vòng tròn trung tâm. */
+        top: 540px;
+        left: 960px;
+        position: absolute;
+        transform: translate(-50%, -50%); /* Kỹ thuật căn giữa tuyệt đối */
+        z-index: 10; /* Giữ chữ luôn ở trên cùng */
+      
+        /* Style chữ đã được cập nhật */
+        font-family: var(--font-primary); /* Dùng font BT Beau Sans */
+        font-weight: 400; /* 'regular' */
+        font-size: 27px;
+        color: var(--dl-color-default-black); /* Màu đen */
+        line-height: 1.1;
+        text-align: center;
+      }
+  
+  
+  /* ==========================================================================
+     Positioning for Individual Graphic Elements
+     ========================================================================== */
+  
+  .universe-section__ellipse--center-1 {
+    top: 450px;
+    left: 870px;
+    width: 180px;
+    height: 180px;
+    position: absolute;
+  }
+  .universe-section__ellipse--center-2 {
+    top: 400px;
+    left: 820px;
+    width: 280px;
+    height: 280px;
+    position: absolute;
+  }
+  .universe-section__ellipse--center-3 {
+    top: 350px;
+    left: 770px;
+    width: 380px;
+    height: 380px;
+    position: absolute;
+  }
+  .universe-section__ellipse--center-4 {
+    top: 300px;
+    left: 720px;
+    width: 480px;
+    height: 480px;
+    position: absolute;
+  }
+  .universe-section__ellipse--center-5 {
+    top: 250px;
+    left: 670px;
+    width: 580px;
+    height: 580px;
+    position: absolute;
+  }
+  .universe-section__ellipse--center-6 {
+    top: 200px;
+    left: 620px;
+    width: 680px;
+    height: 680px;
+    position: absolute;
+  }
+  
+  /* Các chấm nhỏ và các element khác */
+  .universe-section__dot-1 {
+    top: 449px;
+    left: 1178px;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+  }
+  .universe-section__dot-2 {
+    top: 722px;
+    left: 938px;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+  }
+  .universe-section__dot-3 {
+    top: 298px;
+    left: 706px;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+  }
+  .universe-section__group-107 {
+    top: 280px;
+    left: 800px;
+    width: 70px;
+    height: 74px;
+    position: absolute;
+  }
+  .universe-section__group-107-ellipse {
+    top: 31px;
+    left: 11px;
+    width: 47px;
+    height: 47px;
+    position: absolute;
+  }
+  .universe-section__group-266-1 {
+    top: 780px;
+    left: 715px;
+    width: 48px;
+    position: absolute;
+  }
+  .universe-section__group-266-2 {
+    top: 591px;
+    left: 663px;
+    width: 48px;
+    position: absolute;
+  }
+  .universe-section__group-266-2-ellipse {
+    width: 33px;
+    height: 33px;
+  }
 
-.frame265-rectangle22 {
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  object-fit: cover;
-}
+  /* <<< THAY ĐỔI 1: Cập nhật vị trí cho hành tinh trên quỹ đạo thứ 2 */
+  .universe-section__group-268 {
+    top: 530px;      /* Vị trí cũ: 513px */
+    left: 1136px;     /* Vị trí cũ: 1105px */
+    width: 90px;
+    position: absolute;
+  }
+  .universe-section__group-268-ellipse {
+    width: 25px;
+    height: 25px;
+  }
 
-/* SỬA LỖI: Container mới cho khối đồ họa */
-.frame265-graphic-container {
-  /* Đặt kích thước bằng với artboard gốc trong Figma */
-  width: 1920px;
-  height: 1080px; 
-  position: relative;
-  /* Thu nhỏ toàn bộ container xuống còn 50% kích thước gốc */
-  transform: scale(0.5); 
-  /* Bạn có thể thay đổi giá trị 0.5 thành 0.4 hoặc 0.6 để điều chỉnh kích thước */
-  flex-shrink: 0; /* Ngăn container bị co lại bởi flexbox */
-}
-
-
-/* CÁC THUỘC TÍNH BÊN DƯỚI GIỮ NGUYÊN */
-/* VÌ CHÚNG ĐANG POSITION THEO .frame265-graphic-container */
-
-.frame265-ellipse5 {
-  top: 450px;
-  left: 870px;
-  width: 180px;
-  height: 180px;
-  position: absolute;
-}
-
-.frame265-ellipse8 {
-  top: 400px;
-  left: 820px;
-  width: 280px;
-  height: 280px;
-  position: absolute;
-}
-
-.frame265-ellipse9 {
-  top: 350px;
-  left: 770px;
-  width: 380px;
-  height: 380px;
-  position: absolute;
-}
-
-.frame265-ellipse10 {
-  top: 300px;
-  left: 720px;
-  width: 480px;
-  height: 480px;
-  position: absolute;
-}
-
-.frame265-ellipse11 {
-  top: 250px;
-  left: 670px;
-  width: 580px;
-  height: 580px;
-  position: absolute;
-}
-
-.frame265-ellipse12 {
-  top: 200px;
-  left: 620px;
-  width: 680px;
-  height: 680px;
-  position: absolute;
-}
-
-.frame265-ellipse15 {
-  top: 449px;
-  left: 1178px;
-  width: 15px;
-  height: 15px;
-  position: absolute;
-}
-
-.frame265-ellipse17 {
-  top: 722px;
-  left: 938px;
-  width: 15px;
-  height: 15px;
-  position: absolute;
-}
-
-.frame265-ellipse16 {
-  top: 298px;
-  left: 706px;
-  width: 15px;
-  height: 15px;
-  position: absolute;
-}
-
-.frame265-text1 {
-  top: 522px;
-  left: 895px;
-  color: var(--dl-color-default-black);
-  height: auto;
-  position: absolute;
-  text-align: center;
-  line-height: 110.00000238418579%;
-}
-
-.frame265-group107 {
-  top: 280px;
-  left: 800px;
-  width: 70px;
-  height: 74px;
-  display: flex;
-  position: absolute;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-
-.frame265-ellipse13 {
-  top: 31px;
-  left: 11px;
-  width: 47px;
-  height: 47px;
-  position: absolute;
-}
-
-.frame265-frame2661 {
-  gap: 16px;
-  top: 780px;
-  left: 715px;
-  width: 48px;
-  display: flex;
-  position: absolute;
-  align-items: center;
-  flex-shrink: 0;
-  flex-direction: column;
-}
-
-.frame265-frame2662 {
-  gap: 16px;
-  top: 591px;
-  left: 663px;
-  width: 48px;
-  display: flex;
-  position: absolute;
-  align-items: center;
-  flex-shrink: 0;
-  flex-direction: column;
-}
-
-.frame265-ellipse18 {
-  width: 33px;
-  height: 33px;
-}
-
-.frame265-frame268 {
-  gap: 16px;
-  top: 513px;
-  left: 1105px;
-  width: 90px;
-  display: flex;
-  position: absolute;
-  align-items: center;
-  flex-shrink: 0;
-  flex-direction: column;
-}
-
-.frame265-ellipse7 {
-  width: 25px;
-  height: 25px;
-}
-
-.frame265-frame267 {
-  gap: 16px;
-  top: 688px;
-  left: 1140px;
-  width: 60px;
-  display: flex;
-  position: absolute;
-  align-items: center;
-  flex-shrink: 0;
-  flex-direction: column;
-}
-
-.frame265-ellipse14 {
-  width: 37px;
-  height: 37px;
-}
-
-.frame265-ellipse169 {
-  top: 311px;
-  left: 811px;
-  width: 47px;
-  height: 47px;
-  position: absolute;
-}
+  /* <<< THAY ĐỔI 2: Cập nhật vị trí cho hành tinh trên quỹ đạo thứ 4 */
+  .universe-section__group-267 {
+    top: 750px;      /* Vị trí cũ: 688px */
+    left: 1120px;     /* Vị trí cũ: 1140px */
+    width: 60px;
+    position: absolute;
+  }
+  .universe-section__group-267-ellipse {
+    width: 37px;
+    height: 37px;
+  }
+  .universe-section__ellipse--final {
+    top: 311px;
+    left: 811px;
+    width: 47px;
+    height: 47px;
+    position: absolute;
+  }
