--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,7 +1,7 @@
 /* src/styles/fonts.css */
 
 /*****************************************************
- * KHAI BÁO FONT CHỮ LOCAL
+ * KHAI BÁO FONT CHỮ LOCAL - STANDARDIZED NAMING
  *****************************************************/
 
 /* 
@@ -10,54 +10,83 @@
 ============================================ 
 */
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-Regular-400-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-Regular.ttf') format('truetype');
-  font-weight: 400; font-style: normal; font-display: swap;
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-Italic-400-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-Italic.ttf') format('truetype');
-  font-weight: 400; font-style: italic; font-display: swap;
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-Light-300-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-Light.ttf') format('truetype');
-  font-weight: 300; font-style: normal; font-display: swap;
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-LightItalic-300-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-LightItalic.ttf') format('truetype');
-  font-weight: 300; font-style: italic; font-display: swap;
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-Medium-500-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-Medium.ttf') format('truetype');
-  font-weight: 500; font-style: normal; font-display: swap;
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-MediumItalic-500-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-MediumItalic.ttf') format('truetype');
-  font-weight: 500; font-style: italic; font-display: swap;
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-Bold-700-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-Bold.ttf') format('truetype');
-  font-weight: 700; font-style: normal; font-display: swap;
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-BoldItalic-700-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-BoldItalic.ttf') format('truetype');
-  font-weight: 700; font-style: italic; font-display: swap;
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-ExtraBold-800-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-ExtraBold.ttf') format('truetype');
-  font-weight: 800; font-style: normal; font-display: swap;
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'BT Beau Sans';
+  font-family: 'BT-BeauSans-ExtraBoldItalic-800-ttf';
   src: url('@fonts/BTBeauSans/BT-BeauSans-ExtraBoldItalic.ttf') format('truetype');
-  font-weight: 800; font-style: italic; font-display: swap;
+  font-weight: 800;
+  font-style: italic;
+  font-display: swap;
 }
 
 /* 
@@ -66,54 +95,83 @@
 ============================================ 
 */
 @font-face {
-  font-family: 'Saol Display';
-  src: url('@fonts/SaolDisplay/TTF/SaolDisplay-Regular.ttf') format('truetype');
-  font-weight: 400; font-style: normal; font-display: swap;
-}
-@font-face {
-  font-family: 'Saol Display';
-  src: url('@fonts/SaolDisplay/TTF/SaolDisplay-RegularItalic.ttf') format('truetype');
-  font-weight: 400; font-style: italic; font-display: swap;
-}
-@font-face {
-  font-family: 'Saol Display';
+  font-family: 'SaolDisplay-Light-300';
   src: url('@fonts/SaolDisplay/TTF/SaolDisplay-Light.ttf') format('truetype');
-  font-weight: 300; font-style: normal; font-display: swap;
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Saol Display';
+  font-family: 'SaolDisplay-LightItalic-300';
   src: url('@fonts/SaolDisplay/TTF/SaolDisplay-LightItalic.ttf') format('truetype');
-  font-weight: 300; font-style: italic; font-display: swap;
+  font-weight: 300;
+  font-style: italic;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Saol Display';
+  font-family: 'SaolDisplay-Regular-400';
+  src: url('@fonts/SaolDisplay/TTF/SaolDisplay-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SaolDisplay-RegularItalic-400';
+  src: url('@fonts/SaolDisplay/TTF/SaolDisplay-RegularItalic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'SaolDisplay-Medium-500';
   src: url('@fonts/SaolDisplay/TTF/SaolDisplay-Medium.ttf') format('truetype');
-  font-weight: 500; font-style: normal; font-display: swap;
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Saol Display';
+  font-family: 'SaolDisplay-MediumItalic-500';
   src: url('@fonts/SaolDisplay/TTF/SaolDisplay-MediumItalic.ttf') format('truetype');
-  font-weight: 500; font-style: italic; font-display: swap;
+  font-weight: 500;
+  font-style: italic;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Saol Display';
+  font-family: 'SaolDisplay-Semibold-600';
   src: url('@fonts/SaolDisplay/TTF/SaolDisplay-Semibold.ttf') format('truetype');
-  font-weight: 600; font-style: normal; font-display: swap;
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Saol Display';
+  font-family: 'SaolDisplay-SemiboldItalic-600';
   src: url('@fonts/SaolDisplay/TTF/SaolDisplay-SemiboldItalic.ttf') format('truetype');
-  font-weight: 600; font-style: italic; font-display: swap;
+  font-weight: 600;
+  font-style: italic;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Saol Display';
+  font-family: 'SaolDisplay-Bold-700';
   src: url('@fonts/SaolDisplay/TTF/SaolDisplay-Bold.ttf') format('truetype');
-  font-weight: 700; font-style: normal; font-display: swap;
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Saol Display';
+  font-family: 'SaolDisplay-BoldItalic-700';
   src: url('@fonts/SaolDisplay/TTF/SaolDisplay-BoldItalic.ttf') format('truetype');
-  font-weight: 700; font-style: italic; font-display: swap;
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
 }
 
 /* 
@@ -122,36 +180,41 @@
 ============================================ 
 */
 @font-face {
-  font-family: "PPNeueMontreal-Book";
-  src: url("@fonts/ppneuemontreal-book.otf") format("opentype");
+  font-family: 'PPNeueMontreal-Book-400-otf';
+  src: url('@fonts/ppneuemontreal-book.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "PPNeueMontreal-Medium";
-  src: url("@fonts/ppneuemontreal-medium.otf") format("opentype");
+  font-family: 'PPNeueMontreal-BookItalic-400-otf';
+  src: url('@fonts/ppneuemontreal-italic.otf') format('opentype');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'PPNeueMontreal-Medium-500-otf';
+  src: url('@fonts/ppneuemontreal-medium.otf') format('opentype');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-  font-family: "PPNeueMontreal-Bold";
-  src: url("@fonts/ppneuemontreal-bold.otf") format("opentype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "PPNeueMontreal-Italic";
-  src: url("@fonts/ppneuemontreal-italic.otf") format("opentype");
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: "PPNeueMontreal-Semibold";
-  src: url("@fonts/ppneuemontreal-semibolditalic.otf") format("opentype");
+  font-family: 'PPNeueMontreal-SemiboldItalic-600-otf';
+  src: url('@fonts/ppneuemontreal-semibolditalic.otf') format('opentype');
   font-weight: 600;
   font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'PPNeueMontreal-Bold-700-otf';
+  src: url('@fonts/ppneuemontreal-bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
 }
